--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server/app.js && cd client/ && yarn start"
+    "start": "node server/app.js"
   },
   "repository": {
     "type": "git",
