--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "moment": "^2.22.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
+    "react-bootstrap-counter": "^1.0.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "2.0.4",
